# distributed_neuro_sim

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
configs/: benchmark.yaml  default.yaml  diehl_cook_brian2_reference.yaml  diehl_cook_mnist_400.yaml  som_lm_snn.yaml
docs/: PROJECT_GUIDE.md  k3d-concurrent-benchmark.md
k3d/: deployment.yaml  ingress.yaml  job.yaml  namespace.yaml  pvc.yaml  service.yaml
k8s/: deployment.yaml  service.yaml
models/: increasing_inhibition_network_400.pt
results/: baseline.json  constrained_0.25cpu.json  constrained_0.5cpu.json
scripts/: batch_eth_mnist.py  benchmark.py  convert_brian2_weights.py  load_brian2_assignments.py  plot_rq1.py  plot_rq2.py  run_benchmarks.py  run_benchmarks.sh  run_concurrent_benchmark.py
src/neuro_sim/: __init__.py  benchmark.py  cli.py  compat.py  config.py  main.py
src/neuro_sim/api/: __init__.py  server.py
src/neuro_sim/data/: __init__.py  dataset.py
src/neuro_sim/examples/: __init__.py  simple_lif.py
src/neuro_sim/models/: __init__.py  base.py  diehl_cook.py  factory.py  increasing_inhibition.py  lif_snn.py
src/neuro_sim/training/: __init__.py  evaluator.py  trainer.py
src/neuro_sim/training/strategies/: __init__.py  base.py  increasing_inhib.py  standard.py
src/neuro_sim/utils/: __init__.py  logging.py  model_persistence.py
